Fixed the header glitch and made the collapsed navbutton working again

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -5,3 +5,6 @@
 h1.toptitle {
 	margin-top: 0px;
 }
+.footer {
+	background-color: white;
+}
